--- a/package.json
+++ b/package.json
@@ -70,8 +70,11 @@
     "@escook/request-miniprogram": "^0.2.1",
     "@vue/shared": "^3.0.0",
     "core-js": "^3.6.5",
+    "dayjs": "^1.11.3",
     "flyio": "^0.6.2",
+    "luch-request": "^3.0.7",
     "regenerator-runtime": "^0.12.1",
+    "uview-ui": "^2.0.33",
     "vue": "^2.6.11",
     "vuex": "^3.2.0"
   },
@@ -92,12 +95,18 @@
     "@vue/cli-service": "~4.5.15",
     "babel-plugin-import": "^1.11.0",
     "cross-env": "^7.0.2",
+    "deepmerge": "^4.2.2",
+    "eslint": "^8.18.0",
+    "eslint-config-alloy": "^4.5.1",
+    "eslint-plugin-vue": "^9.1.1",
     "jest": "^25.4.0",
     "mini-types": "*",
     "miniprogram-api-typings": "*",
+    "node-sass": "^4.14.1",
     "postcss-comment": "^2.0.0",
     "sass": "^1.52.3",
     "sass-loader": "10",
+    "vue-eslint-parser": "^9.0.2",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
